--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </nav>
             </header>
-            <main class="container-index">
+            <main>
                 <h1>Welcome to the Metaverse</h1>
                 <h2>Gaming</h2>
                 <div class="main-index">
@@ -99,14 +99,13 @@
                         ><span class="topia">utopia</span></a
                     >
                 </div>
-            </main>
-            <footer>
-                <section class="contact">
-                    <p>Contact the (spider) WEB3</p>
-                    <input type="text" placeholder="write something human..." /><button>
-                        <img src="./assets/img/search.svg" alt="contact" />
-                    </button>
-                </section>
+                <div class="img-main">
+                    <img
+                        style="border-radius: 50%"
+                        src="./assets/img/diablo4-2.webp"
+                        alt="diabloIV"
+                    />
+                </div>
                 <section class="rank">
                     <a href="./pages/download.html">
                         <img src="./assets/img/Vector.png" alt="download" />
@@ -115,6 +114,15 @@
                         >TOP RANKED</a
                     >
                 </section>
+            </main>
+            <footer>
+                <section class="contact">
+                    <p>Contact the (spider) WEB3</p>
+                    <input type="text" placeholder="write something human..." /><button>
+                        <img src="./assets/img/search.svg" alt="contact" />
+                    </button>
+                </section>
+
                 <section class="social-media">
                     <a href="https://www.instagram.com/" target="_blank"
                         ><img src="./assets/img/instagram1.png" alt="instagram"
