--- a/pages/challenge.html
+++ b/pages/challenge.html
@@ -72,6 +72,7 @@
                 </nav>
             </header>
             <main>
+                <h1>Challenge</h1>
                 <h2 style="background-image: linear-gradient(to right, green, rgb(0, 255, 0))">
                     > We hope you have enjoyed the former videos, now we need directives.
                 </h2>
@@ -156,8 +157,19 @@
                         </button>
                     </div>
                 </section>
+                <div class="video">
+                    <iframe
+                        width="700"
+                        height="350"
+                        src="https://www.youtube.com/embed/9bRWIdOMfro"
+                        title="Diablo IV Announce Cinematic | By Three They Come"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                    ></iframe>
+                </div>
             </main>
-            <footer class="footer-challenge">
+            <footer>
                 <section class="contact">
                     <p>Contact the (spider) WEB3</p>
                     <input type="text" placeholder="write something human..." /><button>
