--- a/pages/create-path.html
+++ b/pages/create-path.html
@@ -70,6 +70,7 @@
                 </nav>
             </header>
             <main>
+                <h1 style="color: black">Write</h1>
                 <h3
                     style="
                         background-image: linear-gradient(
@@ -88,6 +89,17 @@
                         <input class="write-path" type="text" name="path" id="1" />
                     </form>
                     <button class="submit">Submit</button>
+                </div>
+                <div class="video">
+                    <iframe
+                        width="715"
+                        height="402"
+                        src="https://www.youtube.com/embed/88HP1EC6U_s"
+                        title="Diablo IV | Tráiler de fecha de lanzamiento oficial"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                    ></iframe>
                 </div>
             </main>
             <footer>
