--- a/pages/download.html
+++ b/pages/download.html
@@ -73,6 +73,7 @@
                 </nav>
             </header>
             <main>
+                <h1 style="color: black">Download</h1>
                 <h2 style="background-image: linear-gradient(yellow, brown)">
                     See ya in the real meta-world, hope you get there safe.
                     <br />
@@ -85,12 +86,21 @@
                         <img src="../assets/img/download.png" alt="download" />
                     </button>
                 </div>
+                <div class="img">
+                    <img
+                        style="margin-bottom: 50px; border-radius: 20%"
+                        src="../assets/img/diablo4.webp"
+                        alt="diabloIV"
+                    />
+                </div>
+                <p class="ranking">&#128081; RANKING &#128081;</p>
                 <table class="table table-hover table-dark">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">Alias</th>
                             <th scope="col">Public address</th>
+                            <th scope="col">Punkte gewonnen</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -98,36 +108,43 @@
                             <th scope="row">1</th>
                             <td>Otto the Mountain</td>
                             <td>0x</td>
+                            <td>384736</td>
                         </tr>
                         <tr>
                             <th scope="row">2</th>
                             <td>Jacob the Snow Leopard</td>
                             <td>0x</td>
+                            <td>324209</td>
                         </tr>
                         <tr>
                             <th scope="row">3</th>
                             <td>Larry the Bird</td>
                             <td>0x</td>
+                            <td>324023</td>
                         </tr>
                         <tr>
                             <th scope="row">4</th>
                             <td>Lark the Lightning Bolt</td>
                             <td>0x</td>
+                            <td>309442</td>
                         </tr>
                         <tr>
                             <th scope="row">5</th>
                             <td>Pedro the Strong</td>
                             <td>0x</td>
+                            <td>292424</td>
                         </tr>
                         <tr>
                             <th scope="row">6</th>
                             <td>Laurelio the Caesar</td>
                             <td>0x</td>
+                            <td>276442</td>
                         </tr>
                         <tr>
                             <th scope="row">7</th>
                             <td>Leonidas the Greek</td>
                             <td>0x</td>
+                            <td>243324</td>
                         </tr>
                     </tbody>
                 </table>
