--- a/pages/your-nft.html
+++ b/pages/your-nft.html
@@ -75,6 +75,7 @@
                 </nav>
             </header>
             <main>
+                <h1>PICK</h1>
                 <h3>
                     > Congrats &#127881; <br />
                     U've earned the right to pick up 1 NFT-card. <br />
@@ -91,7 +92,45 @@
                         <button class="nft-cards" onclick=""></button>
                     </div>
                 </section>
+                <h3 style="margin-top: 25px">Characters</h3>
+                <section class="video-characters">
+                    <iframe
+                        src="https://blz-contentstack-assets.akamaized.net/v3/assets/blt9c12f249ac15c7ec/blta8ec25d8ee6beb96/628d17275c838e3e5a186b29/lg-barb.webm?quality=80&format=webply"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                    ></iframe>
+                    <iframe
+                        src="https://blz-contentstack-assets.akamaized.net/v3/assets/blt9c12f249ac15c7ec/bltfdd1f8ba89bb2640/628d16f3aae55b3088982fff/lg-druid.webm?quality=80&format=webply"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                    ></iframe>
+                    <iframe
+                        src="https://blz-contentstack-assets.akamaized.net/v3/assets/blt9c12f249ac15c7ec/blt75781ec0c742ff64/628d16feaaf6494e42a08e34/lg-sorc.webm?quality=80&format=webply"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                    ></iframe>
+                </section>
+                <section style="width: 100%" class="video-characters2">
+                    <iframe
+                        src="https://www.youtube.com/embed/BmUsgxD_eXI"
+                        title="Diablo IV | Tráiler cinematográfico del nigromante"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                    ></iframe>
+                    <iframe
+                        src="https://www.youtube.com/embed/LvrLZ4yETHI"
+                        title="Diablo IV - Rogue Announce Trailer"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                    ></iframe>
+                </section>
             </main>
+
             <footer>
                 <section class="contact">
                     <p>Contact the (spider) WEB3</p>
